Update contents (unfinished yet)

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -5,9 +5,9 @@
 	<!-- Basic metas
     ======================================== -->
 	<meta charset="utf-8">
-	<meta name="author" content="">
-	<meta name="description" content="">
-	<meta name="keywords" content="">
+	<meta name="author" content="PhotoEditor">
+	<meta name="description" content="An innovative, smart photo editor for transforming your digital images & assets according to your needs.">
+	<meta name="keywords" content="PhotoEditor, Cryptocurrency">
 
 	<!-- Mobile specific metas
     ======================================== -->
@@ -17,7 +17,7 @@
 	<meta property="og:url" content="index.html" />
 	<!-- Page Title
     ======================================== -->
-	<title>Xeco React js Template Documentation</title>
+	<title>PhotoEditor APP User Manual</title>
 
 	<!-- Favicon -->
 	<link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.png">
@@ -59,7 +59,7 @@
 							<a class="support-link d-none d-md-inline-block" href="mailto:eaglesthemes@gmail.com"
 								target="_blank">request support</a>
 							<a class="e-btn d-none d-md-inline-block"
-								href="https://themeforest.net/user/eaglesthemes/portfolio" target="_blank">Visit Themes</a>
+								href="https://cyberfishai.com" target="_blank">Visit Our Website</a>
 							<a href="#" class="toggle-navbar"><i class="icon_menu"></i></a>
 						</div>
 					</div>
@@ -91,12 +91,12 @@
 
 							<li class="nav-item">
 								<a class="nav-link" href="#react_installation"><img src="assets/images/icon/react-icon.png">
-									React Installation</a>
+									Activation Code Acquisition </a>
 							</li>
 
 							<li class="nav-item">
-								<a class="nav-link" href="#basic_site_setting"><img src="assets/images/icon/writer.png"> Basic
-									Site Setting</a>
+								<a class="nav-link" href="#basic_site_setting"><img src="assets/images/icon/writer.png">
+									Basic APP Functionality </a>
 								<span class="icon">
 									<i class="icon_plus"></i>
 									<i class="icon_minus-06"></i>
@@ -119,7 +119,8 @@
 							</li>
 
 							<li class="nav-item">
-								<a class="nav-link" href="#pages"><img src="assets/images/icon/landing-page.png"> Pages </a>
+								<a class="nav-link" href="#pages"><img src="assets/images/icon/landing-page.png">
+									Advanced Feature Activation </a>
 								<span class="icon">
 									<i class="icon_plus"></i>
 									<i class="icon_minus-06"></i>
@@ -133,7 +134,7 @@
 
 							<li class="nav-item">
 								<a class="nav-link" href="#template_options"><img src="assets/images/icon/settings.png">
-									Template Options </a>
+									Advanced APP Functionality </a>
 								<span class="icon">
 									<i class="icon_plus"></i>
 									<i class="icon_minus-06"></i>
@@ -159,88 +160,90 @@
 									<div class="steps-panel">
 										<ol class="ordered-list">
 											<li>
-												<strong>Item Name : </strong>Xeco - ICO & Crypto Landing Page React js Template
+												<strong>Item Name : </strong>PhotoEditor - An innovative, smart photo editor for Android.
 											</li>
 											<li>
-												<strong>Created: </strong>16 March 2024
+												<strong>Created: </strong>01 May 2024
 											</li>
-											<li><strong>Item Version : </strong> v 1.0.0</li>
+											<li><strong>Item Version : </strong> v 0.0.1</li>
 											<li>
 												<strong>Author : </strong>
-												<a href="https://themeforest.net/user/eaglesthemes/portfolio"
-													target="_blank">eaglesthemes</a>
+												<a href="https://cyberfishai.com"
+													target="_blank">PhotoEditor</a>
 											</li>
 											<li>
 												<strong>Support Ticket: </strong>
-												<a href="mailto:eaglesthemes@gmail.com"
-													target="_blank">eaglesthemes@gmail.com</a>
+												<a href="mailto:contact@photoeditor.com"
+													target="_blank">contact@photoeditor.com</a>
 											</li>
 										</ol>
 									</div>
 									<figure>
-										<img class="max-100" src="assets/images/screenshot.png" alt="">
+										<blockquote class="imgur-embed-pub" lang="en" data-id="xXTGcVC"  ><a href="//imgur.com/xXTGcVC"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+										<!-- <img class="max-100" src="assets/images/screenshot.png" alt=""> -->
 									</figure>
 
 									<section id="introduction">
 										<h2>Introduction</h2>
-										<h4 class="title">Xeco - React js ICO & Crypto Landing Page Template Documentation</h4>
+										<h4 class="title">PhotoEditor - An innovative, smart photo editor for Android documentation.</h4>
 										<div class="top-support">For any support please don't hesitate to contact us at <a
 												href="mailto:eaglesthemes@gmail.com" target="_blank"><b>Support Center</b></a>. We provide
 											13 hours real-time support for our customers.</div>
-										<p>We would like to thank you for choosing <b>Xeco</b>.</p>
+										<p>We would like to thank you for choosing <b>PhotoEditor</b>.</p>
 									</section>
 									<!-- End of #getting_started -->
 									<section id="requirements">
 										<h3>Getting started</h3>
-										<p>Xeco – ICO & Crypto Landing Page Template is a high-quality React js Template with a unique style and clean design. You can use it for multipurpose like ICO Presentation and new Crypto coins, bitcoin mining websites, cryptocurrency exchange and trading, digital currencies, finances, and business consulting. And also has comments on each section included in the template so you can easily adapt your templates to suit your needs.</p>
+										<p>PhotoEditor is a powerful Android application that allows you to edit and enhance your photos with ease. It offers a wide range of features, including <strong>filters</strong>, <strong>effects</strong>, <strong>cropping</strong>, <strong>resizing</strong>, and more.</p>
 										<div class="requirements">
-											<h2>Requirements</h2>
-											<p>There are system requirements in order to install and setup Xeco template and its
-												components properly. Make sure that you are installed <strong>node.js</strong> and
-												<strong>Yarn</strong>.</p>
+											<h2>Features</h2>
+											<p>PhotoEditor is a powerful Android application that allows you to edit and enhance your photos with ease. It offers a wide range of features, including <strong>filters</strong>, <strong>effects</strong>, <strong>cropping</strong>, <strong>resizing</strong>, and more.</p>
+											<p>To get started, download and install the PhotoEditor app from the <a href="https://play.google.com/store" target="_blank">Google Play Store<i
+												class="icon_link_alt"></i></a>. Once installed, open the app and select a photo from your gallery or take a new one. You can then use the various editing tools to adjust your photo to your liking. When you're done, save your edited photo to your device or share it directly from the app.</p>
+											<p>For more detailed instructions, refer to the user manual included in the app's Help section.</p>
 
-											<h4>For nodejs go here <a target="_blank" href="https://nodejs.org/en/">Nodjs <i
+											<h4>For direct download go here <a target="_blank" href="https://nodejs.org/en/">APK Download <i
 														class="icon_link_alt"></i></a></h4>
 											<figure>
 												<img class="max-100" src="assets/images/nodejs.png" alt="">
 											</figure>
 
-											<h4>For yarn go here <a target="_blank"
-													href="https://classic.yarnpkg.com/lang/en/docs/install/#windows-stable">Yarn <i
+											<h4>For Google Store installation go here <a target="_blank"
+													href="https://classic.yarnpkg.com/lang/en/docs/install/#windows-stable">Google Store <i
 														class="icon_link_alt"></i></a></h4>
 											<figure>
 												<img class="max-100" src="assets/images/yarn.png" alt="">
 											</figure>
 
-											<h4>Install Yarn</h4>
+											<h4>Install APP</h4>
 											<figure>
 												<img class="max-100" src="assets/images/yearn-install.png" alt="">
 											</figure>
 										</div>
 
 
-										<h4>Template Features</h4>
+										<h4>APP Features</h4>
 										<div class="steps-panel">
 											<ul class="ordered-list">
-												<li><b>Latest React JS (18.2.0)</b></li>
-												<li><b>TypeScript</b></li>
-												<li><b>Dynamic Active Menu</b></li>
-												<li><b>react-helmet-async</b></li>
-												<li><b>react-router-dom</b></li>
-												<li>Based on Bootstrap 5.x</li>
+												<li><b>Latest Android support (Android 12)</b></li>
+												<li><b>Automatic template upgrade</b></li>
+												<li><b>Dynamic character revision</b></li>
+												<li><b>User-friendly interface</b></li>
+												<li><b>Save and share in social media in one click</b></li>
+												<li>Based on Kotlin 5.x</li>
 												<li>Flat, modern and clean design.</li>
 												<li>Cleaning on-page optimized.</li>
-												<li>Free Premium Quality Support</li>
-												<li>Sticky Header</li>
-												<li>Google Fonts</li>
-												<li>100% Responsive</li>
-												<li>Nice and Clean Design</li>
-												<li>Clean and commented code</li>
-												<li>Customizeable all components of each page</li>
-												<li>Integrated with FontAwesome </li>
-												<li>1 Home Pages</li>
-												<li>3+ Inner Pages</li>
-												<li>Blog Pages</li>
+												<li>Free premium quality support</li>
+												<li>No background processes</li>
+												<li>Google fonts</li>
+												<li>100% open source</li>
+												<li>Nice and clean UI design</li>
+												<li>User manual online</li>
+												<li>Customizeable all characters of each template image</li>
+												<li>Integrated with cloud support </li>
+												<li>Image theme change function </li>
+												<li>API support (in the future)</li>
+												<li>Google plat store available</li>
 												<li>Image background</li>
 												<li>Easy to customize</li>
 												<li>Flexible and multi-purpose</li>
@@ -275,48 +278,37 @@
 
 								<article id="react_installation" class="section-main doc-section">
 									<section>
-										<h2>React Installation</h2>
-										<p>Please follow the instructions in the video to see how you can install react on your
-											hosting:</p>
+										<h2>Activation Code Acquisition</h2>
+										<p>To unlock the advanced features of our app, you need to acquire an activation code. Follow the instructions below:</p>
 										<div class="steps-panel">
 											<ol class="ordered-list">
-												<li><strong>For local host</strong> -
+												<li><strong>Obtain activation code</strong> -
 													<ol class="ordered-list">
-														<li>Open you command prompt</li>
-														<li>npm</li>
-														<li>npm install or npm install--legacy-peer-deps</li>
-														<li>npm start (will start the dev server at
-															<strong>http://loaclhost:3000</strong>)</li>
+														<li>Buy our token from the designated platform.</li>
+														<li>Receive a hash code as the activation code.</li>
+														<li>Store it securely somewhere.</li>
 													</ol>
 												</li>
-
-												<li><strong>Deploying to Netlify</strong> - <a target="_blank"
-														href="https://www.youtube.com/watch?v=Ey_90l9GaAw&ab_channel=JavaScriptMastery">https://www.youtube.com/watch?v=TbQ4kWX29lQ</a>
-												</li>
-
 											</ol>
 											<br>
 											<br>
 											<ol class="ordered-list">
-												<li><strong>For locally build</strong> -
+												<li><strong>Activation code verification</strong> -
 													<ol class="ordered-list">
-														<li>Open you command prompt</li>
-														<li>yarn build (will build locally and generate public directory)</li>
-														<li>yarn start (will start the locally build server at
-															<strong>http://loaclhost:3000</strong>)</li>
+														<li>Open the APP and click the `activation` button.</li>
+														<li>Enter this hash code into the activation field in our app.</li>
+														<li>Click 'verify' to verify the activation code</li>
+														<li>Once the code is verified success fully, the advance feature of editing will be unlocked.</li>
 													</ol>
-												</li>
-												<li><strong>Deploying to Vercel</strong> - <a
-														href="https://www.youtube.com/watch?v=lAJ6LyvW_cw&ab_channel=WebDevJunkie">https://www.youtube.com/watch?v=_8wkKL0LKks</a>
 												</li>
 											</ol>
 											<br>
 											<br>
-											<h5 class="ml-20">Other Scripts</h5>
+											<h5 class="ml-20">Support Us</h5>
 											<ol class="ordered-list">
-												<li>Open you command prompt</li>
-												<li>yarn lint:fix (This will format your code and fix auto fixable eslint error)
-												</li>
+												<li>Recommend our software to others</li>
+												<li>Rate us 5-star in Goolge Play store</li>
+												<li>Follow our Twitter for awesome information</li>
 											</ol>
 										</div>
 									</section>
@@ -326,7 +318,7 @@
 
 								<article id="basic_site_setting" class="section-main doc-section">
 									<section>
-										<h2>Basic Site Settings</h2>
+										<h2>Basic APP Functionality</h2>
 									</section>
 									<!-- End of #section-4 -->
 									<section id="change_site_title_and_favicon">
@@ -498,11 +490,10 @@
 									<section>
 										<h3>Support</h3>
 										<p style="color:red;font-weight:bold;">If you face any issue please contact us at
-											<a class="black-color" href="https://eaglesthemes.net/help/support/">Support
-												Ticket</a>. We provide 15 hours real-time support for our customers.
+											<a class="black-color" href="https://cyberfishai.com/help/support/">contact@photoeditor.com</a>. We provide 15 hours real-time support for our customers.
 										</p>
-										<p>If you love the template, Don't forget to rate us 5 stars and let us know your feedback for a better update.</p>
-										<p>Thank you for purchasing our template.</p>
+										<p>If you love the app, Don't forget to rate us 5 stars and let us know your feedback for a better update.</p>
+										<p>Thank you for using our application.</p>
 										<p class="mt50"></p>
 									</section>
 								</article>
@@ -529,12 +520,13 @@
 				<div class="col-md-8">
 					<div class="page-footer">
 						<p>© 2024 All Rights Reserved by <a
-								href="https://themeforest.net/user/eaglesthemes/portfolio" target="_blank">eaglesthemes</a>.</p>
+								href="https://cyberfishai.com" target="_blank">PhotoEditor</a>.</p>
 					</div>
 				</div>
 				<div class="col-md-4">
 					<div class="social-footer text-md-right">
 						<a href="#"><i class="social_youtube"></i></a>
+						<a href="#"><i class="social_twitter"></i></a>
 					</div>
 				</div>
 			</div>
